Repackage the plugin into io.spring.gradle

--- a/samples/spring-io-sample-sanitychecks/build.gradle
+++ b/samples/spring-io-sample-sanitychecks/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 	dependencies {
-		classpath 'org.springframework.build.gradle:spring-io-plugin:0.0.3.BUILD-SNAPSHOT'
+		classpath 'io.spring.gradle:spring-io-plugin:0.0.4.BUILD-SNAPSHOT'
 	}
 }
 
