--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 
-group = 'org.springframework.build.gradle'
+group = 'io.spring.gradle'
 
 repositories {
     mavenCentral()
