--- a/src/main/resources/META-INF/gradle-plugins/spring-io.properties
+++ b/src/main/resources/META-INF/gradle-plugins/spring-io.properties
@@ -1,1 +1,1 @@
-implementation-class=org.springframework.build.gradle.springio.SpringIoPlugin
+implementation-class=io.spring.gradle.springio.SpringIoPlugin
