Update the plugin to source managed versions from Maven bom
Previously, the plugin used a properties file to source the managed
versions. This commit updates the plugin to replace this with the
use of a dependency management plugin. This allows a Maven bom,
such as the one published by the Platform, to be used. This paves the
way for the removal of the Platform's properties artifact in its 2.0
release.

--- a/samples/spring-io-sample-sanitychecks/build.gradle
+++ b/samples/spring-io-sample-sanitychecks/build.gradle
@@ -28,8 +28,15 @@ dependencies {
 	runtime 'asm:asm:3.3.1'
 
 	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
+}
 
-	springIoVersions files('io-versions.properties')
+dependencyManagement {
+	springIoTestRuntime {
+		dependencies {
+			dependency 'org.springframework.security:spring-security-core:3.2.3.RELEASE'
+			dependency 'org.springframework:spring-core:4.0.4.RELEASE'
+		}
+	}
 }
 
 test {
