--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'io.spring.gradle:dependency-management-plugin:0.5.5.RELEASE'
+    compile 'io.spring.gradle:dependency-management-plugin:1.0.0.RC1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:2.5.0'
