--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,16 @@ group = 'io.spring.gradle'
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/plugins-release' }
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'io.spring.gradle:dependency-management-plugin:1.0.0.RC2'
+    compile 'io.spring.gradle:dependency-management-plugin:1.0.2.RELEASE'
+    compileOnly 'io.spring.gradle:propdeps-plugin:0.0.8'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:2.5.0'
+    testCompile 'io.spring.gradle:propdeps-plugin:0.0.8'
 }
