--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compile localGroovy()
 	compile 'io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE'
 	compileOnly 'io.spring.gradle:propdeps-plugin:0.0.8'
+	testCompile gradleTestKit()
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-core:1.10.19'
 	testCompile 'org.assertj:assertj-core:2.5.0'
