Ensure that Gradle uses HTTPS
See gh-12

--- a/samples/spring-io-sample-sanitychecks/build.gradle
+++ b/samples/spring-io-sample-sanitychecks/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'groovy'
 apply plugin: 'spring-io'
 
 repositories {
-	mavenCentral()
+	maven { url 'https://repo.maven.apache.org/maven2/' }
 	maven { url 'https://repo.spring.io/libs-snapshot'}
 }
 
